--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,48 +1,34 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
     <div class="container-fluid">
-    <div class="collapse navbar-collapse" id="navbarCollapse">
-        <ul class="navbar-nav me-auto mb-2 mb-md-0">
-            <li class="nav-item">
-                <a class="nav-link active" 
-                    aria-current="page" 
-                    href="#"
-                    (click)="goToSection('home')">
-                        Inicio
-                </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" 
-                href="#"
-                (click)="goToSection('articles')">
-                    Artículos
-                </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" 
-                href="#"
-                (click)="goToSection('new-template')">
-                    Nuevo artículo template
-                </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" 
-                href="#"
-                (click)="goToSection('new-reactive')">
-                    Nuevo artículo reactivo
-                </a>
-            </li>
-        </ul>
-        <form class="d-flex" role="search">
-        <input
-            class="form-control me-2"
-            type="search"
-            placeholder="Buscar"
-            aria-label="Buscar"
-        />
-        <button class="btn btn-outline-success" type="submit">
-            Buscar
-        </button>
-        </form>
-    </div>
+        <div class="collapse navbar-collapse" id="navbarCollapse">
+            <ul class="navbar-nav me-auto mb-2 mb-md-0">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#" (click)="goToSection('login')">
+                        Login
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#" (click)="goToSection('register')">
+                        Registro
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#" (click)="goToSection('articles')">
+                        Lista de artículos
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#" (click)="goToSection('new-reactive')">
+                        Crear artículo
+                    </a>
+                </li>
+            </ul>
+            <form class="d-flex" role="search">
+                <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Buscar" />
+                <button class="btn btn-outline-success" type="submit">
+                    Buscar
+                </button>
+            </form>
+        </div>
     </div>
 </nav>
