--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -13,12 +13,12 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#" (click)="goToSection('articles')">
+                    <a class="nav-link" href="#" (click)="goToSection('article-list')">
                         Lista de artículos
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#" (click)="goToSection('new-reactive')">
+                    <a class="nav-link" href="#" (click)="goToSection('article-new')">
                         Crear artículo
                     </a>
                 </li>
