--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -5,13 +5,14 @@
         <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
 
             <div class="form-floating" id="username-login">
-                <label for="username">Username:</label>
-                <input id="username" type="text" formControlName="username">
+                <input class="form-control" id="username" type="text" placeholder="Username" formControlName="username">
+                <label for="username">Usuario</label>
             </div>
 
             <div class="form-floating" id="password-login">
-                <label for="password">Password:</label>
-                <input id="password" type="password" formControlName="password">
+                <input class="form-control" id="password" type="password" placeholder="Password"
+                    formControlName="password">
+                <label for="password">Contraseña</label>
             </div>
 
             <button class="btn btn-primary" type="submit">
