--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -18,6 +18,10 @@
             <button class="btn btn-primary" type="submit">
                 Login
             </button>
+
+            <div *ngIf="serverMessage">
+                {{ serverMessage }}
+            </div>
         </form>
     </div>
 </div>
