Algunos ajustes y article-detail

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -180,7 +180,7 @@
     <app-navbar></app-navbar>
   </div>
 
-  <div class="content">
+  <div class="content justify-content-center">
     <router-outlet></router-outlet>
   </div>
 
