Corregido problema de routing con login y register

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -4,12 +4,12 @@
             <ul class="navbar-nav me-auto mb-2 mb-md-0">
                 <!-- Login -->
                 <li class="nav-item">
-                    <a class="nav-link" routerLink="/login" routerLinkActive="active">Login</a>
+                    <a class="nav-link" routerLink="/user/login" routerLinkActive="active">Login</a>
                 </li>
 
                 <!-- Registro -->
                 <li class="nav-item">
-                    <a class="nav-link" routerLink="/register" routerLinkActive="active">Registro</a>
+                    <a class="nav-link" routerLink="/user/register" routerLinkActive="active">Registro</a>
                 </li>
 
                 <!-- Lista de artículos -->
